# GPBot

./: .env  Grand Theft Auto V.url  docker-compose.yml  go.mod
auth-service/: .gitignore  CMakeLists.txt  Dockerfile  README.md  go.mod  go.sum  main.cpp  main.go
core-service/: .gitignore  CMakeLists.txt  Dockerfile  README.md  go.mod  main.go
core-service/include/: AuthClient.hpp  Database.hpp
core-service/src/: AuthClient.cpp  Database.cpp  main.cpp
telegram-bot/: .env.example  bot.py  requirements.txt
web-client/: Dockerfile  README.md  nginx.conf  package.json
web-client/public/: index.html
web-client/src/: App.css  App.js
web-client/src/components/: Login.js  TestList.js  TestResult.js  TestView.js  api.js
web-client/src/components/components/: TestList.js
web-client/src/styles/: App.css
